--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -18,7 +18,9 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
         android:onClick="sendMessage"
-        android:text="Send" />
+        android:text="Send" 
+        android:textColor="#FFFFFFFF"
+        android:textStyle="bold"/>
 
     <CheckBox
         android:id="@+id/chkEmergencyContacts"
@@ -40,7 +42,7 @@
         android:paddingRight="4.5dp"
         android:paddingTop="4.5dp"
         android:text="Include emergency contacts"
-        android:textColor="@color/cyan"
+        android:textColor="#FFFFFFFF"
         android:textSize="22sp" />
 
     <EditText
