--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -13,13 +13,13 @@
     </style>
 
     <style name="EditTextStyle" parent="@android:style/Widget.EditText">
-        <item name="android:textColor">#00E2FF</item>
+        <item name="android:textColor">#FFFFFFFF</item>
     </style>
 
     <style name="spinnerItemStyle">
         <item name="android:padding">10dp</item>
         <item name="android:textSize">22sp</item>
-        <item name="android:textColor">#00E2FF</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="spinnerDropDownItemStyle">
