--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,20 +7,19 @@
      
      <TextView
          android:id="@+id/text_view_title"
-         android:layout_width="wrap_content"
+         android:layout_width="200dp"
          android:layout_height="120dp"
          android:layout_above="@+id/button_share_my_location"
-         android:layout_alignParentLeft="true"
-         android:layout_alignParentRight="true"
+         android:layout_alignLeft="@+id/text_holder"
+         android:layout_alignRight="@+id/text_holder"
          android:gravity="left"
+         android:paddingBottom="4dp"
          android:paddingLeft="5dp"
          android:paddingRight="5dp"
          android:paddingTop="4dp"
-         android:paddingBottom="4dp"
+         android:scrollbars="vertical"
          android:textColor="#FFFFFFFF"
-         android:scrollbars = "vertical"
          android:textSize="16sp" />
-     
 
      <fragment
          android:id="@+id/map"
@@ -63,5 +62,23 @@
          android:text="@string/share_my_location"
          android:textColor="#FFFFFFFF"
          android:typeface="sans" />
+
+     <TextView
+         android:id="@+id/text_holder"
+         android:layout_width="100dp"
+         android:layout_height="120dp"
+         android:layout_above="@+id/button_share_my_location"
+         android:layout_alignLeft="@+id/button_share_my_location"
+         android:layout_alignRight="@+id/button_emergency"
+         android:layout_marginRight="10dp"
+         android:layout_marginLeft="10dp"
+         android:gravity="left"
+         android:paddingBottom="4dp"
+         android:paddingLeft="5dp"
+         android:paddingRight="5dp"
+         android:paddingTop="4dp"
+         android:scrollbars="vertical"
+         android:textColor="#FFFFFFFF"
+         android:textSize="16sp" />
 
 </RelativeLayout>
