--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -55,7 +55,7 @@
         android:ems="20"
         android:gravity="top|left"
         android:hint="Enter additional message"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textNoSuggestions|none"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
