--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -77,6 +77,7 @@
         android:text="Contacts"
         android:textColor="#FFFFFFFF" />
 
+    <!--  
     <Button
         android:id="@+id/buttonAddOptionalMessage"
         android:layout_width="150dp"
@@ -90,24 +91,27 @@
         android:text="Add Additional Message"
         android:textColor="#FFFFFFFF"
         android:textStyle="bold" />
+        -->
 
     <TextView
         android:id="@+id/tvOptionalMessage"
         android:layout_width="250dp"
         android:layout_height="85dp"
         android:layout_above="@+id/buttonSend"
-        android:layout_alignLeft="@+id/buttonAddOptionalMessage"
-        android:layout_alignRight="@+id/buttonAddOptionalMessage"
-        android:layout_below="@+id/buttonAddOptionalMessage"
+        android:layout_alignLeft="@+id/buttonSend"
+        android:layout_alignRight="@+id/buttonSend"
+        android:layout_below="@+id/editCompleteMessage"
+        android:background="@drawable/text_border"
+        android:clickable="true"
         android:ems="20"
-        android:hint="Additional Message"
+        android:hint="Click here to add an additional message"
         android:maxHeight="140dp"
+        android:onClick="getAdditionalMessage"
         android:paddingBottom="6dp"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
         android:paddingTop="6dp"
         android:scrollbars="vertical"
-        android:textSize="18sp"
-        android:background="@drawable/text_border" />
+        android:textSize="18sp" />
 
 </RelativeLayout>
