new spinner button

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -60,8 +60,8 @@
         android:id="@+id/editEmergencyAddress"
         android:layout_width="250dp"
         android:layout_height="85dp"
-        android:layout_alignLeft="@+id/buttonSendEmergency"
-        android:layout_alignRight="@+id/buttonSendEmergency"
+        android:layout_alignLeft="@+id/tvEmergencyOptionalMessage"
+        android:layout_alignRight="@+id/tvEmergencyOptionalMessage"
         android:ems="20"
         android:hint="Current location: "
         android:inputType="textMultiLine|textNoSuggestions|none"
@@ -77,11 +77,11 @@
         android:id="@+id/spinnerEmergencyDialogs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editEmergencyAddress"
-        android:layout_alignRight="@+id/editEmergencyAddress"
+        android:layout_alignLeft="@+id/buttonSendEmergency"
+        android:layout_alignRight="@+id/buttonSendEmergency"
         android:layout_below="@+id/editEmergencyAddress"
         android:layout_marginBottom="2.5dp"
-        android:background="@drawable/text_border"
+        android:background="@drawable/btn_dropdown"
         android:entries="@array/emergency_dialogs"
         android:prompt="@string/dialog_prompt"
         android:spinnerMode="dialog" />
@@ -91,10 +91,12 @@
         android:layout_width="250dp"
         android:layout_height="85dp"
         android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
-        android:layout_alignRight="@+id/spinnerEmergencyDialogs"
+        android:layout_alignLeft="@+id/buttonSendEmergency"
+        android:layout_alignRight="@+id/buttonSendEmergency"
         android:layout_below="@+id/spinnerEmergencyDialogs"
         android:background="@drawable/text_border"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:clickable="true"
         android:ems="20"
         android:hint="Click here to add an additional message"
