--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -27,8 +27,8 @@
         android:id="@+id/editCompleteMessage"
         android:layout_width="250dp"
         android:layout_height="85dp"
-        android:layout_alignLeft="@+id/editPhoneNumber"
-        android:layout_alignRight="@+id/buttonContacts"
+        android:layout_alignLeft="@+id/tvOptionalMessage"
+        android:layout_alignRight="@+id/tvOptionalMessage"
         android:layout_below="@+id/buttonContacts"
         android:layout_marginBottom="5dp"
         android:ems="20"
@@ -46,9 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/buttonContacts"
-        android:layout_alignParentLeft="true"
+        android:layout_alignLeft="@+id/editCompleteMessage"
         android:layout_alignTop="@+id/buttonContacts"
-        android:layout_marginLeft="5dp"
         android:layout_toLeftOf="@+id/buttonContacts"
         android:background="@drawable/text_border"
         android:ems="20"
@@ -60,17 +59,17 @@
         android:paddingTop="5dp"
         android:singleLine="true"
         android:textSize="17sp" >
+
     </TextView>
 
     <Button
         android:id="@+id/buttonContacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/editCompleteMessage"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/button_default_style"
         android:onClick="getContacts"
@@ -102,6 +101,8 @@
         android:layout_alignRight="@+id/buttonSend"
         android:layout_below="@+id/editCompleteMessage"
         android:background="@drawable/text_border"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:clickable="true"
         android:ems="20"
         android:hint="Click here to add an additional message"
