--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,13 +16,16 @@
         <item name="android:textColor">#FFFFFFFF</item>
     </style>
 
-    <style name="spinnerItemStyle">
-        <item name="android:padding">10dp</item>
+    <style name="spinnerItemStyle" 
+        parent="android:Widget.TextView.SpinnerItem">
+     	
+        <item name="android:padding">2dp</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="spinnerDropDownItemStyle">
+    <style name="spinnerDropDownItemStyle"
+        parent="android:TextAppearance.Widget.TextView.SpinnerItem">
         <item name="android:padding">3dp</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">#00E2FF</item>
