--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -18,6 +18,8 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
         android:onClick="sendMessage"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:text="Send" />
 
     <!--  
