--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,5 +16,9 @@
         android:id="@+id/menu_about"
         android:title="About"
         app:showAsAction="never"/>
-
+    
+    <item 
+        android:id="@+id/menu_emergency_contacts"
+        android:title="Emergency Contacts"
+        app:showAsAction="never" />
 </menu>
