--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,16 +16,13 @@
         <item name="android:textColor">#FFFFFFFF</item>
     </style>
 
-    <style name="spinnerItemStyle" 
-        parent="android:Widget.TextView.SpinnerItem">
-     	
+    <style name="spinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
         <item name="android:padding">2dp</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="spinnerDropDownItemStyle"
-        parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+    <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
         <item name="android:padding">3dp</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">#00E2FF</item>
@@ -38,8 +35,8 @@
         <item name="android:textColorTertiary">#E8E8E8</item>
         <item name="android:textSize">16sp</item>
         <item name="android:windowBackground">@color/black</item>
-        
     </style>
+
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -49,10 +46,10 @@
         <item name="android:windowBackground">@color/black</item>
 
         <!-- For the resting Spinner style -->
-        <item name="android:spinnerItemStyle">            @style/spinnerItemStyle</item>
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
 
         <!-- For each individual Spinner list item once clicked on -->
-        <item name="android:spinnerDropDownItemStyle">            @style/spinnerDropDownItemStyle</item>
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
     </style>
 
 </resources>
