--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -6,8 +6,9 @@
         android:key="sound"
         android:summary="Turn the sound on or off"
         android:title="Sound" />
-    
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. 
+
+    <!--
+    NOTE: ListPreference's summary should be set to its value by the activity code. 
     <ListPreference
         android:defaultValue="-1"
         android:entries="@array/pref_example_list_titles"
@@ -19,16 +20,12 @@
     -->
 
     <MultiSelectListPreference
+        android:defaultValue="@array/empty_array"
         android:dialogTitle="@string/edit_emergency_contacts"
-        android:key="mode_repeat"
-        android:summary="" 
-        android:title="@string/edit_emergency_contacts"
         android:entries="@array/emergency_contacts"
         android:entryValues="@array/emergency_contacts_values"
-        android:defaultValue="@array/empty_array"
-        
-        
-    />
-    
+        android:key="mode_repeat"
+        android:summary=""
+        android:title="@string/edit_emergency_contacts" />
 
 </PreferenceScreen>
