--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -1,38 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@color/black">
+    android:scrollbars="horizontal" >
 
-	<TextView
-	    android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="seecon"
-        android:textSize="30sp"
-        android:textColor="@color/cyan"
-        android:layout_gravity="center"/>
-	<TextView
-	    android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="the signal beacon\ndeveloped by Jeffrey Li, Jared Hettinger, and Katie Ensign"
-        android:textSize="25sp"
-        android:textColor="@color/cyan"
-        android:gravity="center"/>
-	
-	<ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/seecon_icon" 
-        android:layout_gravity="center"/>
-	
-	<TextView
-	    android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="An app that simplifies location sharing with friends, family, and emergency personnel\n"
-        android:textSize="20sp"
-        android:textColor="@color/cyan"
-        android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:orientation="vertical" >
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="seecon"
+            android:textColor="@color/cyan"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="the signal beacon\ndeveloped by Jeffrey Li, Jared Hettinger, and Katie Ensign"
+            android:textColor="@color/cyan"
+            android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/seecon_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="An app that simplifies location sharing with friends, family, and emergency personnel\n"
+            android:textColor="@color/cyan"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" Alpha Release Features"
+            android:textColor="@color/cyan"
+            android:textIsSelectable="true"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="• \n"
+            android:textColor="@color/cyan"
+            android:textIsSelectable="true"
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=" Beta Release Features"
+            android:textColor="@color/cyan"
+            android:textIsSelectable="true"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="• \n"
+            android:textColor="@color/cyan"
+            android:textIsSelectable="true"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+</ScrollView>
