added UI changes to settings page

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,6 +4,7 @@
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="sound"
+        android:widgetLayout="@layout/custom_checkbox"
         android:summary="Turn the sound on or off"
         android:title="Sound" />
 
