--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -2,6 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:scrollbars="horizontal" >
 
     <LinearLayout
@@ -14,6 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="seecon"
             android:textColor="@color/cyan"
             android:textSize="30sp" />
@@ -21,6 +25,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:gravity="center"
             android:text="the signal beacon\ndeveloped by Jeffrey Li, Jared Hettinger, and Katie Ensign"
             android:textColor="@color/cyan"
@@ -37,6 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="An app that simplifies location sharing with friends, family, and emergency personnel\n"
             android:textColor="@color/cyan"
             android:textSize="20sp" />
@@ -45,6 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="\nUpdates and Releases"
             android:textColor="@color/cyan"
             android:textSize="20sp" />
@@ -53,6 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text=" Alpha Release"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
@@ -61,8 +73,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:gravity="center"
             android:text="•Displays live updates of user location\n•Text/Share your location with a friend\n•Send an emergency/distress text to an emergency number\n"
             android:textColor="@color/white"
@@ -73,6 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text=" Beta Release"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
@@ -82,8 +96,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="•Select a list of Emergency Contacts to send your distress text\n•Gesture confirmations to prevent accidental message sending\n•Message confirmation that notifies the success/failure of your output texts\n"
             android:textColor="@color/white"
             android:textIsSelectable="true"
@@ -93,6 +107,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text=" Future Release"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
@@ -101,8 +117,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="•Send a voice recording instead of a text in times of distress\n•Ping nearby users within a specific radius with a distress signal\n\n"
             android:textColor="@color/white"
             android:textIsSelectable="true"
