Final touches on Gesture implementation :heart: :heart: :heart: :heart: :heart::heart::heart::heart:

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -20,7 +20,7 @@
         android:onClick="sendMessage"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:text="Send" />
+        android:text="Send (requires confirmation)" />
 
     <!--  
     <EditText
