--- a/res/layout/activity_gesture_confirmation.xml
+++ b/res/layout/activity_gesture_confirmation.xml
@@ -4,22 +4,28 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
- 
-
     <TextView
         android:id="@+id/meow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/text_border"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Draw a Triangle for message confirmation"
+        android:text="Draw a Triangle or Circle"
         android:textColor="@color/cyan"
-        android:textSize="18sp" />
+        android:textSize="25sp" />
 
     <android.gesture.GestureOverlayView
         android:id="@+id/gestures"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        android:layout_weight="1.0" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="1.0"
+        android:background="@drawable/text_border" />
 
 </LinearLayout>
